<resources>
    <string name="app_name">HomeAutomation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_add_device">AddDeviceActivity</string>
    <string name="open_wifi_settings">WI-FI Settings</string>
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="proceed">Proceed</string>
    <string name="add_device_step1">Step1: press and hold device config button for more than 3seconds</string>
    <string name="add_device_step2">Step2: open Wi-FI settings &amp; connect to device WI-FI Ex: Homeauto_xxx</string>
    <string name="add_device_step3">Step3: click proceed</string>
    <string name="instructions">Instructions</string>
    <string name="back">Back</string>
    <string name="connected_to">Connected To:</string>
    <string name="softap_key">S&amp;M_</string>
    <string name="processing">Please Wait</string>
    <string name="type">Type:</string>
    <string name="id">ID</string>
    <string name="model">Model</string>
    <string name="unknown">Unknown</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid name</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="action_logout">Logout</string>
</resources>
